# firmware-demos

./: README.md
artefacts/: stm32-cmsis-f411re-uart-valid.elf  stm32-cmsis-f411re-uart-vuln.elf  stm32-f411re-uart-int.elf
doc/: stm32.md
host/cert-valid/: Makefile  certlogic.c  certlogic.h  main.c
host/cert-vuln/: Makefile  certlogic.c  certlogic.h
nordic-freertos-nrf52-rtc/: Makefile  Makefile.common
nordic-freertos-nrf52-rtc/sdk/: .gitignore
nrf52-ncs-52840dk-bluetooth/: README.md  env.sh  west.yaml  west.yml
nrf52-ncs-52840dk-bluetooth/application/: prj.conf
nrf52-ncs-52840dk-bluetooth/firmware/: west.yml
nrf52-ncs-52840dk-bluetooth/scripts/: build.sh  env  westreinit.sh
nrf52-nimble-52840-bluetooth/: .gitignore
rm57-halcogen-demo/: .ccsproject  .cproject  .project  rm57-halcogen-demo.dil  rm57-halcogen-demo.hcg
rm57-halcogen-demo/targetConfigs/: TMS570LC43xx.ccxml
rm57-halcogen-freertos-demo/: .cproject  .project  rm57-halcogen-freertos-demo.dil  rm57-halcogen-freertos-demo.hcg
sifive-rs-rv32-hello/: Cargo.toml  README.md
sifive-rs-rv32-hello/src/: main.rs
stm32-cmsis-f411re-uart-echo/: Makefile
stm32-cmsis-f411re-uart-valid/: Makefile
stm32-cmsis-f411re-uart-valid/asinine/: asinine.make  asn1.make  include  src  tests.make  x509.make
stm32-cmsis-f411re-uart-vuln/: Makefile
stm32-cmsis-f411re-uart-vuln/asinine/: src  (+5 more)
stm32-zephyr-f411re/: CMakeLists.txt  environ.sh  nucleo_f411re.overlay  prj.conf  west.yml
stm32-zephyr-f411re/src/: canbus.c  canbus.h  common.h  lcd.c  lcd.h  main.c  sensor.c  sensor.h
trigger/: asinine.py
(+13 files in other folders)
